Saving WIP: fixing horizontal overflow display existing tags in Edit

--- a/frontend/src/assets/global.css
+++ b/frontend/src/assets/global.css
@@ -321,8 +321,10 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: nowrap;
   height: fit-content;
-  line-height: 2rem;
+  max-height: 2rem;
+  /*line-height: 2rem;*/
   background-color: var(--secondary-chips);
   color: #ffffff;
   font-weight: bold;
@@ -330,7 +332,6 @@ p {
   padding: 0.625rem;
   margin: 0rem 0.5rem 0 1rem;
   min-width: 4em;
-  max-width: auto;
 }
 
 .tag-chip button {
